// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <h3>
    overview.quality_profiles
  </h3>
  <ul
    className="project-info-list"
  >
    <Tooltip
      key="js"
      overlay="overview.deleted_profile.name"
    >
      <li
        className="project-info-deleted-profile"
      >
        <div
          className="text-ellipsis"
        >
          <span
            className="note spacer-right"
          >
            (
            js
            )
          </span>
          name
        </div>
      </li>
    </Tooltip>
    <li
      key="css"
    >
      <div
        className="text-ellipsis"
      >
        <span
          className="note spacer-right"
        >
          (
          CSS
          )
        </span>
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/profiles/show",
              "query": Object {
                "language": "css",
                "name": "name",
              },
            }
          }
        >
          name
        </Link>
      </div>
    </li>
  </ul>
</Fragment>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <h3>
    overview.quality_profiles
  </h3>
  <ul
    className="project-info-list"
  >
    <Tooltip
      key="js"
      overlay="overview.deleted_profile.name"
    >
      <li
        className="project-info-deleted-profile"
      >
        <div
          className="text-ellipsis"
        >
          <span
            className="note spacer-right"
          >
            (
            js
            )
          </span>
          name
        </div>
      </li>
    </Tooltip>
    <Tooltip
      key="css"
      overlay="overview.deprecated_profile.10"
    >
      <li
        className="project-info-deprecated-rules"
      >
        <div
          className="text-ellipsis"
        >
          <span
            className="note spacer-right"
          >
            (
            CSS
            )
          </span>
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/profiles/show",
                "query": Object {
                  "language": "css",
                  "name": "name",
                },
              }
            }
          >
            name
          </Link>
        </div>
      </li>
    </Tooltip>
  </ul>
</Fragment>
`;
